# ccandle

./: .gitignore  LICENSE  README.md  cli.py  pyproject.toml  requirements.txt  space_utils.py
analysis/: space_overview.py  sql_queries.py  stats_cartography.py  stats_duplicates.py  stats_excerpts.py  stats_link_info.py
authors/: schema_table_authors.py  scrape_authors.py
children/: scrape_children.py
cli/: main.py
cli/commands/: cartographer.py  cartography.py  connection.py  excerpts.py  labels.py  overview.py  smoke_test.py  spaces.py  sql.py  stats.py  sync.py
config/: config_app.py  config_db.py  config_network.py  config_types.py  confluence_auth.py
db/: create_pages_table.py  db_query_utils.py  db_utils.py  schema_table_labels.py  schema_table_pages.py  table_utils.py
docs/: an_ideal_confluence.md  how_does_ccandle_work.md  what_does_candle_do.md  what_does_ccandle_do.md  who_is_this_for.md
excerpts/: excerpt_utils.py
labels/: label_bulk_actions.py  schema_table_labels.py  scrape_labels.py
network/: network_utils.py
page/: page_html_parser.py
pages/: excerpt_bulk_actions.py  page_html_parser.py  schema_table_pages.py  scrape_list_of_available_pages.py  scrape_page_htmls.py
pages/evaluation/: page_scoring_defs.py
pages/parsing/: basic_metadata_extractor.py  eval_defs.py  excerpt_defs.py  link_parser.py  navbox_parser.py  paragraph_parser.py  (+1 more)
parsing/: formatting.py  parsing_utils.py  plain_text_extractor.py
presentation/: formatting_utils.py  page_previews.py  theme.py  user_communication.py  user_input.py
sanity/: page_parsing_tests.py  smoke_tester.py  test_excerpt_automation.py  test_validate_pages_table_schema.py
space_stats/: stats_authors.py  stats_link_info.py
spaces/: scrape_list_of_available_pages.py  space_utils.py
sync/: delete_dead_pages.py  scrape_children.py  scrape_list_of_available_pages.py  scrape_page_htmls.py  sync_all.py
tests/: page_parsing_tests.py  test_excerpt_automation.py  test_fixtures_excerpt_pages.py  test_validate_pages_table_schema.py
(+89 files in other folders)
