[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ccandle"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "joblib>=1.5.3",
    "platformdirs>=4.10.0",
    "rapidfuzz>=3.14.5",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "scikit-learn>=1.7.2",
    "tqdm>=4.68.4",
    "wordfreq>=3.1.1",
    "yaspin>=3.4.0",
]

[project.scripts]
ccandle = "ccandle.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
exclude = [".venv*", "tests*"]
