[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ccandle"
version = "0.2.0"
description = "Toolset for analyzing and improving Confluence Cloud documentation."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"

authors = [
    {name = "Morgan Randall"}
]

keywords = [
    "confluence",
    "atlassian",
    "documentation",
    "technical-documentation",
    "knowledge-base",
    "wiki",
    "cli",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
]

dependencies = [
    "beautifulsoup4>=4.13",
    "joblib>=1.5.3",
    "platformdirs>=4.10.0",
    "rapidfuzz>=3.14.5",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "scikit-learn>=1.7.2",
    "tqdm>=4.68.4",
    "wordfreq>=3.1.1",
    "yaspin>=3.4.0",
]

[project.scripts]
ccandle = "ccandle.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
exclude = [".venv*", "tests*"]
